--- a/estilosite.css
+++ b/estilosite.css
@@ -78,6 +78,7 @@ header {
 
 .site-logo {
     height: 100px;
+    border-radius: 100px;
     width: auto;
     filter: drop-shadow(0 0 5px rgba(255, 0, 0, 0.5)); /* Brilho vermelho no logo */
     transition: transform 0.2s ease-out;
