--- a/estilosite.css
+++ b/estilosite.css
@@ -73,7 +73,8 @@ header {
 }
 
 .site-logo {
-    height: 40px;
+    height: 120px;
+    border-radius: 50px;
     width: auto;
     filter: drop-shadow(0 0 5px rgba(255, 0, 0, 0.5)); /* Brilho vermelho no logo */
     transition: transform 0.2s ease-out;
